Reformat all .[tj]s files with prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "esModuleInterop": true,
     "moduleResolution": "node"
   },
-  "exclude": ["node_modules", "dist", "**.test.ts", "jest.config.js"]
+  "exclude": ["node_modules", "dist", "jest.config.js"]
 }
